--- a/app/views/documentary_films/index.html.erb
+++ b/app/views/documentary_films/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center">
-  <%= link_to 'Nuevo Documental', "/documental/new", class: 'btn btn-primary' %>
+  <%= link_to 'Nuevo Documental', "/documentales/new", class: 'btn btn-primary' %>
   
 </div>
 <h1>Lista de Documentales</h1>
