--- a/app/views/series/create.html.erb
+++ b/app/views/series/create.html.erb
@@ -1,10 +1,1 @@
-<h1>Lista de Seriesz</h1>
-<ul>
-  <% @movies.each do |movie| %>
-    <li>
-      <strong>Name:</strong> <%= movie.name %><br>
-      <strong>Synopsis:</strong> <%= movie.synopsis %><br>
-      <strong>Director:</strong> <%= movie.director %>
-    </li>
-  <% end %>
-</ul>
+<h1>Lista de Series</h1>
